LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Investors_Private_Equity_Firms_Contact__c.field-meta.xml
<CustomField>
    <fullName>Investors_Private_Equity_Firms_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;Investors / Private Equity Firms Contact&quot; of the new client on conversion of which contact record is created.</description>
    <label>Investors / Private Equity Firms Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contacts (Investors / Private Equity Firms Contact)</relationshipLabel>
    <relationshipName>Client_Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>