LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Is_Influencer__c.field-meta.xml
<CustomField>
    <fullName>Is_Influencer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created according to U_066(Capture Contact Fields)</description>
    <label>Is Influencer</label>
    <type>Checkbox</type>
</CustomField>