LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IsGTEmployee__c.field-meta.xml
<CustomField>
    <fullName>IsGTEmployee__c</fullName>
    <label>Is GT Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>