LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/IsPardot__c.field-meta.xml
<CustomField>
    <fullName>IsPardot__c</fullName>
    <label>IsPardot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pardot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>