LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Key_Account_Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Sub_Segment__c</fullName>
    <formula>IF( Account.Account_Record_Type__c = &apos;Key Account&apos;, TEXT(Account.Sub_Segment__c ) , TEXT(Account.GT_Client_Group__r.Key_Account_360__r.Sub_Segment__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account Sub-Segment</label>
    <type>Text</type>
</CustomField>