LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/KeyContactIdentifier__c.field-meta.xml
<CustomField>
    <fullName>KeyContactIdentifier__c</fullName>
    <label>Key Contact Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>BOD</fullName>
            </value>
            <value>
                <fullName>KMP</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>