LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Last_Activity_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>This field contains the Date and Time when the last time activity done on Client Contact.</description>
    <label>Last Activity Date Time</label>
    <type>DateTime</type>
</CustomField>