LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Last_updated_by__c.field-meta.xml
<CustomField>
    <fullName>Last_updated_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last updated by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Contacts5</relationshipName>
    <type>Lookup</type>
</CustomField>