LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Last_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_On__c</fullName>
    <label>Last Updated On</label>
    <type>Date</type>
</CustomField>