LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;Law Firm&quot; of the new client on conversion of which contact record is created.</description>
    <label>Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contacts (Law Firm)</relationshipLabel>
    <relationshipName>Client_Contacts4</relationshipName>
    <type>Lookup</type>
</CustomField>