LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Law_Firm_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Contacts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;Law Firm Contacts&quot; of the new client on conversion of which contact record is created.</description>
    <label>Law Firm Contacts</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contacts (Law Firm Contacts)</relationshipLabel>
    <relationshipName>Client_Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>