LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/MemberSince__c.field-meta.xml
<CustomField>
    <fullName>MemberSince__c</fullName>
    <label>Member Since</label>
    <type>Date</type>
</CustomField>