LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Net_Promoter_Score__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score__c</fullName>
    <inlineHelpText>0-6 Detractor. ;  7-8 Passive. ;  9-10 Promoter</inlineHelpText>
    <label>Net Promoter Score</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>