LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/New_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;New client name&quot; of the new client on conversion of which contact record is created.</description>
    <label>Existing Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contacts (New Client Name)</relationshipLabel>
    <relationshipName>ClientContacts</relationshipName>
    <type>Lookup</type>
</CustomField>