LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Other_Committees__c.field-meta.xml
<CustomField>
    <fullName>Other_Committees__c</fullName>
    <description>Created this field as per U_066(Capture Contact Fields) User Story.</description>
    <label>Other Committees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>