LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Other_Passions__c.field-meta.xml
<CustomField>
    <fullName>Other_Passions__c</fullName>
    <description>This field comes into play when user selects &quot;Other&quot; as value in &quot;Contact Personal Interest
&quot; field.</description>
    <label>Other Passions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>