LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for name change</description>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>