LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Reason_for_Active__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Active__c</fullName>
    <label>Reason for Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Longer a defaulter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>