LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Reason_for_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Inactive__c</fullName>
    <label>Reason for Inactive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Longer attached with this Client</fullName>
            </value>
            <value>
                <fullName>Defaulter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>