LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Referral_Client__c.field-meta.xml
<CustomField>
    <fullName>Referral_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contacts (Referral Client)</relationshipLabel>
    <relationshipName>Client_Contacts7</relationshipName>
    <type>Lookup</type>
</CustomField>