LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Contacts (Referral Contact)</relationshipLabel>
    <relationshipName>Client_Contacts6</relationshipName>
    <type>Lookup</type>
</CustomField>