LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Referred_By_Chamber__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Chamber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains information of &quot;Referred By Chamber&quot; of the new client on conversion of which contact record is created.</description>
    <label>Referred By Chamber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Contacts (Referred By Chamber)</relationshipLabel>
    <relationshipName>Client_Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>