LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <label>Registered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>