LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Relationship_Office__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Office(Not in use)</label>
    <referenceTo>Relationship_Office_Master__c</referenceTo>
    <relationshipLabel>Client Contacts</relationshipLabel>
    <relationshipName>Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>