LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/RelationshipLeader__c.field-meta.xml
<CustomField>
    <fullName>RelationshipLeader__c</fullName>
    <label>Relationship Leader</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>