LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/RelationshipOffice__c.field-meta.xml
<CustomField>
    <fullName>RelationshipOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Office</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Client Contacts</relationshipLabel>
    <relationshipName>Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>