LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/ReviewDate__c.field-meta.xml
<CustomField>
    <fullName>ReviewDate__c</fullName>
    <label>Review Date</label>
    <type>Date</type>
</CustomField>