LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Seniority_Role__c.field-meta.xml
<CustomField>
    <fullName>Seniority_Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Owner, Partner &amp; Promoter</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>CHRO</fullName>
            </value>
            <value>
                <fullName>CIO CDO CISO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Manager / Mid Level</fullName>
            </value>
            <value>
                <fullName>NED &amp; AC</fullName>
            </value>
            <value>
                <fullName>Other - CXOs</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>VP &amp; Business Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>