LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <formula>TEXT(Account.SubIndustry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Industry</label>
    <type>Text</type>
</CustomField>