LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sector__c</fullName>
    <description>This field contains value of sub sector of associated client record.</description>
    <formula>TEXT( Account.Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>