LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Sub_segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_segment__c</fullName>
    <formula>TEXT(Account.Sub_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-segment</label>
    <type>Text</type>
</CustomField>