LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/SubIndustry__c.field-meta.xml
<CustomField>
    <fullName>SubIndustry__c</fullName>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SubSector</valueSetName>
    </valueSet>
</CustomField>