LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field contains the value of Type field of associated account which is a type of &quot;Chamber and Appliances&quot; record type of client.</description>
    <formula>TEXT(Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub-Type</label>
    <type>Text</type>
</CustomField>