LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/TypeOfAssociation__c.field-meta.xml
<CustomField>
    <fullName>TypeOfAssociation__c</fullName>
    <label>Type Of Association</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Bilateral</fullName>
            </value>
            <value>
                <fullName>Sectoral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>