LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Update_Performed__c.field-meta.xml
<CustomField>
    <fullName>Update_Performed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used as indicator after which notification on update should perform.</description>
    <label>Update Performed</label>
    <type>Checkbox</type>
</CustomField>