LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/Updated_by_External_DB__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_External_DB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Updated by External DB</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>