LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/VerifiedBy__c.field-meta.xml
<CustomField>
    <fullName>VerifiedBy__c</fullName>
    <label>Verified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>