LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/VerifiedDSTeamDate__c.field-meta.xml
<CustomField>
    <fullName>VerifiedDSTeamDate__c</fullName>
    <label>Verified DS Team Date</label>
    <type>DateTime</type>
</CustomField>