LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/VerrifiedByDSTeam__c.field-meta.xml
<CustomField>
    <fullName>VerrifiedByDSTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verrified by DS Team</label>
    <type>Checkbox</type>
</CustomField>