LinKreta_POC_Repository/force-app/main/default/objects/Contact/fields/YoungCSL__c.field-meta.xml
<CustomField>
    <fullName>YoungCSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Young CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>