LinKreta_POC_Repository/force-app/main/default/objects/Contact/recordTypes/Chamber_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Chamber_Contacts</fullName>
    <active>false</active>
    <label>Chamber Contacts</label>
</RecordType>