LinKreta_POC_Repository/force-app/main/default/objects/Contact/recordTypes/GTClientContacts.recordType-meta.xml
<RecordType>
    <fullName>GTClientContacts</fullName>
    <active>false</active>
    <label>GT Client Contacts</label>
</RecordType>