LinKreta_POC_Repository/force-app/main/default/objects/Contact/recordTypes/GTEmployee.recordType-meta.xml
<RecordType>
    <fullName>GTEmployee</fullName>
    <active>false</active>
    <label>GT Employee</label>
</RecordType>