LinKreta_POC_Repository/force-app/main/default/objects/Contact/recordTypes/Investor_Contacts.recordType-meta.xml
<RecordType>
    <fullName>Investor_Contacts</fullName>
    <active>false</active>
    <label>Investor Contacts</label>
</RecordType>