LinKreta_POC_Repository/force-app/main/default/objects/Contact/recordTypes/LawFirmContacts.recordType-meta.xml
<RecordType>
    <fullName>LawFirmContacts</fullName>
    <active>false</active>
    <label>Law Firm Contacts</label>
</RecordType>