LinKreta_POC_Repository/force-app/main/default/objects/Contact/validationRules/Client_Contact_address_Check_Comma.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Contact_address_Check_Comma</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      
      NOT(ISBLANK(Client_Location__Street__s)),
NOT(
    AND(
        CONTAINS(Client_Location__Street__s, &apos;,&apos;),
        REGEX(Client_Location__Street__s, &quot;.*[a-zA-Z0-9].*,.*[a-zA-Z0-9].*&quot;)
        
    ) 
)
)</errorConditionFormula>
    <errorDisplayField>Contact_Location__Street__s</errorDisplayField>
    <errorMessage>Please add a comma-separated address in Contact Address (Street) .</errorMessage>
</ValidationRule>