LinKreta_POC_Repository/force-app/main/default/objects/Contact/validationRules/Contact_AddressZip_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_AddressZip_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT(ISBLANK(Client_Location__PostalCode__s)),
    LEN(Client_Location__PostalCode__s) &gt; 10
)</errorConditionFormula>
    <errorDisplayField>Client_Location__PostalCode__s</errorDisplayField>
    <errorMessage>Character length should be less than 10.</errorMessage>
</ValidationRule>