LinKreta_POC_Repository/force-app/main/default/objects/Contact/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),ISBLANK(FirstName))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter FirstName.</errorMessage>
</ValidationRule>