LinKreta_POC_Repository/force-app/main/default/objects/Contact/validationRules/LinkedIn_URL_not_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>LinkedIn_URL_not_blank</fullName>
    <active>true</active>
    <description>LinkedIn URL can not be blank if contact status is active.</description>
    <errorConditionFormula>AND(

NOT( $User.Id =  $Label.Linkreta_Integration_User_Id ),

ISBLANK(  Linkedin_URL__c  ) ,   
ISPICKVAL( Contact_status__c  , &quot;Active&quot;) 

)</errorConditionFormula>
    <errorDisplayField>Linkedin_URL__c</errorDisplayField>
    <errorMessage>Please Enter LinkedIn URL</errorMessage>
</ValidationRule>