LinKreta_POC_Repository/force-app/main/default/objects/Contact/validationRules/Mailing_Address_ZipCode.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_Address_ZipCode</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT(ISBLANK(MailingPostalCode )),
    LEN(MailingPostalCode ) &gt; 10
)</errorConditionFormula>
    <errorDisplayField>MailingPostalCode</errorDisplayField>
    <errorMessage>Character length should be less than 10.</errorMessage>
</ValidationRule>