LinKreta_POC_Repository/force-app/main/default/objects/Contact/validationRules/Mandate_ContactAddress.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_ContactAddress</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  
     NOT( $User.Id =   $Label.Linkreta_Integration_User_Id  ),
     ISPICKVAL(Contact_status__c, &apos;Pending DS Team Approval&apos;),
     ISPICKVAL(PRIORVALUE(Contact_status__c), &apos;New Contact Creation&apos;),
     OR(
        ISBLANK (Client_Location__City__s),
        ISBLANK ( TEXT (Client_Location__CountryCode__s)  ),
        ISBLANK (Client_Location__PostalCode__s),
        ISBLANK( Client_Location__Street__s ),
        ISPICKVAL(Client_Location__StateCode__s  , &quot;&quot;)
     )
)</errorConditionFormula>
    <errorMessage>Please fill Contact Address City, Contact Address Country Code, Contact Address Postal Code, Contact Address Street,Contact Address State.</errorMessage>
</ValidationRule>