LinKreta_POC_Repository/force-app/main/default/objects/Contact/validationRules/Reason_for_name_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_name_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
   OR(
      ISCHANGED( FirstName) , 
      ISCHANGED( LastName) 
   ),
   ISBLANK(  Rationale_for_Name_Change__c  ) 
)</errorConditionFormula>
    <errorMessage>Please enter &quot;Rationale for Name Change&quot;.</errorMessage>
</ValidationRule>