LinKreta_POC_Repository/force-app/main/default/objects/Contact/validationRules/Restrict_ContactCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_ContactCreation</fullName>
    <active>true</active>
    <description>This rule is used to restrict contact creation if associated client is inactive.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(   Account.Status__c   , &apos;Inactive&apos;),ISPICKVAL(   Account.DS_Team_Approval_Status__c   , &apos;DS Rejected&apos;)),
ISNEW() )</errorConditionFormula>
    <errorMessage>You cannot create Contact when Client is Inactive or DS Rejected.</errorMessage>
</ValidationRule>